--- a/WebPush/WebPush.csproj
+++ b/WebPush/WebPush.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net462;net471;net48;netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net471;net48;netstandard2.1;net6.0;net7.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.12</Version>
+    <Version>1.0.13-dev.0 </Version>
     <Authors>Cory Thompson</Authors>
     <Company />
     <Product />
     <Description>Web Push library for C#</Description>
-    <PackageLicenseUrl>https://github.com/web-push-libs/web-push-csharp/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicense>https://github.com/web-push-libs/web-push-csharp/blob/master/LICENSE</PackageLicense>
     <PackageProjectUrl>https://github.com/web-push-libs/web-push-csharp/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/web-push-libs/web-push-csharp/</RepositoryUrl>
     <PackageTags>web push notifications vapid</PackageTags>
@@ -18,13 +18,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.4.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="System.Net.Http" Condition="'$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'net471' OR '$(TargetFramework)' == 'net48'" />
-    <PackageReference Include="System.Text.Json" Version="8.0.1"  Condition="'$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'net471' OR '$(TargetFramework)' == 'net48' OR '$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'netstandard2.1'"/>
+    <Reference Include="System.Net.Http" Condition="'$(TargetFramework)' == 'net471' OR '$(TargetFramework)' == 'net48'" />
+    <PackageReference Include="System.Text.Json" Version="8.0.4"
+      Condition="'$(TargetFramework)' == 'net471' OR '$(TargetFramework)' == 'net48' OR '$(TargetFramework)' == 'netstandard2.1'" />
   </ItemGroup>
 
 </Project>
